Add link to notebook

--- a/2017_INRIA_pandas/index.html
+++ b/2017_INRIA_pandas/index.html
@@ -185,7 +185,7 @@ When working with **tabular or structured data** (like R dataframe, SQL table, E
 
 ---
 
-## Key features
+# Key features
 
 * Fast, easy and flexible input/output for a lot of different data formats
 * Working with missing data (`.dropna()`, `pd.isnull()`)
@@ -199,12 +199,14 @@ When working with **tabular or structured data** (like R dataframe, SQL table, E
 
 ---
 
+# Showcase notebook
+
 * Interact with your data
 * Import / export for variety of formats
 * Easy plotting
 * Set of powerful methods to maniputlate data
 
-
+https://github.com/jorisvandenbossche/talks/blob/master/2017_INRIA_pandas/pandas_introduction.ipynb (solved version is available in same repo)
 
 ---
 
