--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <html>
 
 <ul>
-<li><a href="2017_FOSDEM_dask">FOSDEM 2017 - dask</a></li>
+<li><a href="2017_FOSDEM_dask">FOSDEM 2017 - Dask: extending Python data tools for parallel and distributed computing</a></li>
+<li><a href="2017_docathon">Docathon 2017, UGent - Documentation: best practices and tools</a></li>
+<li><a href="2017_INRIA_pandas">INRIA 2017 - Introduction to pandas</a></li>
 </ul>
 </html>
-
