--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <li><a href="2017_FOSDEM_dask">FOSDEM 2017 - Dask: extending Python data tools for parallel and distributed computing</a></li>
 <li><a href="2017_docathon">Docathon 2017, UGent - Documentation: best practices and tools</a></li>
 <li><a href="2017_INRIA_pandas">INRIA 2017 - Introduction to pandas</a></li>
+<li><a href="2017_PyParis_pandas">PyParis, 2017, June 12 - Pandas: what's new and what's coming</a></li>
 </ul>
 </html>
