--- a/2017_PyParis_pandas/index.html
+++ b/2017_PyParis_pandas/index.html
@@ -85,14 +85,14 @@ class: center, middle
 Targeted at working with **tabular or structured data** (like R dataframe, SQL table, Excel spreadsheet, ...):
 
 - Import and export your data
-- Cleane up messy data
+- Clean up messy data
 - Explore data, gain insight into data
 - Process and prepare your data for analysis
 - Analyse your data (together with scikit-learn, statsmodels, ...)
 
 Powerful for working with missing data, working with time series data, for reading and writing your data, for reshaping, grouping, merging your data, ...
 
-It's documentation: http://pandas.pydata.org/pandas-docs/stable/
+Its documentation: http://pandas.pydata.org/pandas-docs/stable/
 
 ---
 
