--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 <li><a href="2017_docathon">Docathon 2017, UGent - Documentation: best practices and tools</a></li>
 <li><a href="2017_INRIA_pandas">INRIA 2017 - Introduction to pandas</a></li>
 <li><a href="2017_PyParis_pandas">PyParis, 2017, June 12 - Pandas: what's new and what's coming</a></li>
+<li><a href="2017_EuroScipy_geopandas">EuroScipy, 2017, August 30 - GeoPandas - Geospatial data in Python made easy</a></li>
+
 </ul>
 </html>
