--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 <li><a href="2017_INRIA_pandas">INRIA 2017 - Introduction to pandas</a></li>
 <li><a href="2017_PyParis_pandas">PyParis, 2017, June 12 - Pandas: what's new and what's coming</a></li>
 <li><a href="2017_EuroScipy_geopandas">EuroScipy, 2017, August 30 - GeoPandas - Geospatial data in Python made easy</a></li>
-
+<li><a href="2018_FOSDEM_geopandas">FOSDEM, 2018, February 4 - GeoPandas - easy, fast and scalable geospatial analysis in Python</a></li>
 </ul>
 </html>
