--- a/2018_FOSDEM_geopandas/index.html
+++ b/2018_FOSDEM_geopandas/index.html
@@ -1,8 +1,5 @@
 <!--
 
- nb --NotebookApp.iopub_data_rate_limit=10000000
-
- 
 - highlight "geospatial data"
 
 -> what is it
@@ -129,6 +126,9 @@ class: center, middle
 Joris Van den Bossche, FOSDEM, February 4, 2018
 
 https://github.com/jorisvandenbossche/talks/
+
+[@jorisvdbossche](https://twitter.com/jorisvdbossche)
+
 
 .affiliations[
   ![:scale 65%](img/logoUPSayPlusCDS_990.png)
@@ -516,7 +516,7 @@ Remove python overhead by only storing pointers to C GEOS objects and iterating 
 
 TL;DR: same API, but better performance and less memory use
 
-Many thanks to Matthew Rocklin for his work!
+Many thanks to Matthew Rocklin (Anaconda, Inc.) for his work!
 
 ---
 
@@ -629,6 +629,8 @@ http://geopandas.readthedocs.io
 - https://github.com/jorisvandenbossche/talks/
 - [jorisvandenbossche.github.io/talks/2018_FOSDEM_geopandas](
     http://jorisvandenbossche.github.io/talks/2018_FOSDEM_geopandas)
+
+http://geopandas.readthedocs.io
 
 
 ---
