--- a/2018_CFM_pandas/index.html
+++ b/2018_CFM_pandas/index.html
@@ -90,6 +90,10 @@ https://github.com/jorisvandenbossche/talks/
   ![:scale 25%](img/inria-logo.png)
 ]
 
+???
+
+- audience: who is using pandas?
+- interupt me at any point if there are questions
 
 ---
 # About me
@@ -161,7 +165,7 @@ Its documentation: http://pandas.pydata.org/pandas-docs/stable/
 * Easy plotting
 
 
----
+???
 
 Focus of pandas
 
@@ -169,7 +173,6 @@ Focus of pandas
 - in memory
 
 
-???
 
 - other packages extend this
 - and known: memory can be "big data" on a big machine
@@ -241,6 +244,12 @@ count: false
 
 ### But: accumulated technical debt, known limitations, ... -> 1.0 is not an end-point
 
+
+---
+
+class: center, middle, bgheader
+background-image: url(img/JakeVdP-ecosystem5.svg)
+background-size: cover
 
 ---
 class: center, middle, inverse
@@ -513,6 +522,13 @@ class: center, middle, inverse
 ![:scale 80%](img/pypi-downloads-pandas.png)
 ]
 
+???
+
+how many pandas users?
+
+website: 400,000 active users that come back every month
+
+also scope becomes bigger
 
 ---
 
@@ -1038,6 +1054,7 @@ count: false
         highlightSpans: true,
         highlightLines: true,
         // ratio: "16:9"
+        slideNumberFormat: '%current% / 38',
       };
       var slideshow = remark.create(config_remark);
     </script>
