add link to notebook

--- a/2018_GeoPython_geopandas/index.html
+++ b/2018_GeoPython_geopandas/index.html
@@ -629,7 +629,10 @@ Matthew Rocklin re-ran the experiment with the in-development version: 3h -> 8mi
 --
 count: false
 
-## Demo time!
+## Demo time! 
+
+See [static version](http://nbviewer.jupyter.org/gist/jorisvandenbossche/67be41a246c1281d7046b31690988321)
+
 
 <!-- # Want to try this out?
 
