--- a/2018_GeoPython_geopandas/index.html
+++ b/2018_GeoPython_geopandas/index.html
@@ -646,6 +646,22 @@ Build new version (needs GEOS and shapely already installed):
 * checkout 'geopandas-cython' branch
 * `make inplace` -->
 
+---
+
+# GeoPandas - dask bridge
+
+https://github.com/mrocklin/dask-geopandas
+
+### **Experimental** library with parallelized geospatial operations and joins
+
+Many areas for improvement:
+
+- higher coverage of functionality (overlay, ...)
+- better use of spatial indexing (e.g. persist data on disk partitioned by region for more efficient intersects, joins, ..)
+- better integration with parquet
+- ...
+
+Experimental, but ready to be tried out!
 
 ---
 
@@ -671,8 +687,8 @@ http://geopandas.readthedocs.io
 ## Those slides:
 
 - https://github.com/jorisvandenbossche/talks/
-- [jorisvandenbossche.github.io/talks/2018_FOSDEM_geopandas](
-    http://jorisvandenbossche.github.io/talks/2018_FOSDEM_geopandas)
+- [jorisvandenbossche.github.io/talks/2018_GeoPython_geopandas](
+    http://jorisvandenbossche.github.io/talks/2018_GeoPython_geopandas)
 
 http://geopandas.readthedocs.io
 
