--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <li><a href="2017_EuroScipy_geopandas">EuroScipy, 2017, August 30 - GeoPandas - Geospatial data in Python made easy</a></li>
 <li><a href="2018_FOSDEM_geopandas">FOSDEM, 2018, February 4 - GeoPandas - easy, fast and scalable geospatial analysis in Python</a></li>
 <li><a href="2018_GeoPython_geopandas">GeoPython, 2018, May 9 - GeoPandas - easy, fast and scalable geospatial analysis in Python</a></li>
+<li><a href="2018_Scipy_sklearn_pandas">Scipy, 2018, July 13 - Scikit-learn and tabular data: closing the gap</a></li>
 </ul>
 </html>
