--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <li><a href="2018_FOSDEM_geopandas">FOSDEM, 2018, February 4 - GeoPandas - easy, fast and scalable geospatial analysis in Python</a></li>
 <li><a href="2018_GeoPython_geopandas">GeoPython, 2018, May 9 - GeoPandas - easy, fast and scalable geospatial analysis in Python</a></li>
 <li><a href="2018_Scipy_sklearn_pandas">Scipy, 2018, July 13 - Scikit-learn and tabular data: closing the gap</a></li>
+<li><a href="2018_FOSS4GBE_geopandas">FOSS4G Belgium, 2018, October 25 - GeoPandas - easy, fast and scalable geospatial analysis in Python</a></li>
 </ul>
 </html>
