updates on PyData Paris slides

--- a/2019_PyDataParis_geopandas_extending_pandas/index.html
+++ b/2019_PyDataParis_geopandas_extending_pandas/index.html
@@ -129,6 +129,20 @@ https://github.com/jorisvandenbossche/talks/
 
 [@jorisvdbossche](https://twitter.com/jorisvdbossche)
 
+---
+class: center, middle
+count: false
+
+# GeoPandas
+
+##  Extending Pandas and Dask to enable easy, fast and scalable geospatial analysis in Python
+
+Joris Van den Bossche, PyData Paris, January 21, 2019
+
+https://github.com/jorisvandenbossche/talks/
+
+[@jorisvdbossche](https://twitter.com/jorisvdbossche)
+
 
 ---
 # About me
@@ -181,6 +195,9 @@ NYC taxi data (pick-up and drop-off locations), from [blog post](https://medium.
 
 ![:scale 49%](img/raster_example.png)
 ![:scale 49%](img/vector_example.png)
+
+--
+count: false
 
 .right[
 ### -> in this talk: focus on vector data
@@ -859,6 +876,10 @@ count: false
 
 See [static version](http://nbviewer.jupyter.org/gist/jorisvandenbossche/67be41a246c1281d7046b31690988321)
 
+--
+count: false
+
+Experimental, but ready to experiment with!
 
 <!-- # Want to try this out?
 
@@ -870,9 +891,7 @@ Build new version (needs GEOS and shapely already installed):
 
 * clone https://github.com/geopandas/geopandas
 * checkout 'geopandas-cython' branch
-* `make inplace` -->
-
----
+* `make inplace`
 
 # GeoPandas - dask bridge
 
@@ -888,6 +907,7 @@ Many areas for improvement:
 - ...
 
 Experimental, but ready to be tried out!
+ -->
 
 ---
 
@@ -913,8 +933,6 @@ http://geopandas.readthedocs.io
 ## Those slides:
 
 - https://github.com/jorisvandenbossche/talks/
-- [jorisvandenbossche.github.io/talks/2018_GeoPython_geopandas](
-    http://jorisvandenbossche.github.io/talks/2018_GeoPython_geopandas)
 
 http://geopandas.readthedocs.io
 
