--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 <li><a href="2018_GeoPython_geopandas">GeoPython, 2018, May 9 - GeoPandas - easy, fast and scalable geospatial analysis in Python</a></li>
 <li><a href="2018_Scipy_sklearn_pandas">Scipy, 2018, July 13 - Scikit-learn and tabular data: closing the gap</a></li>
 <li><a href="2018_FOSS4GBE_geopandas">FOSS4G Belgium, 2018, October 25 - GeoPandas - easy, fast and scalable geospatial analysis in Python</a></li>
+<li><a href="2019_EuroScipy_arrow">EuroScipy, 2019, September 4 - Apache Arrow:  a cross-language development platform for in-memory data</a></li>
 </ul>
 </html>
