--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 <li><a href="2018_FOSS4GBE_geopandas">FOSS4G Belgium, 2018, October 25 - GeoPandas - easy, fast and scalable geospatial analysis in Python</a></li>
 <li><a href="2019_EuroScipy_arrow">EuroScipy, 2019, September 4 - Apache Arrow:  a cross-language development platform for in-memory data</a></li>
 <li><a href="2019_FOSS4GBE_pygeos">FOSS4G Belgium, 2019, October 24 - GEOS in the Python ecosystem</a></li>
+<li><a href="2020_GeoPython_Shapely-2.0">GeoPython, 2020, September 22 - Shapely 2.0: an improved foundation for GeoPandas and the Python geospatial ecosystem</a></li>
 </ul>
 </html>
