--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
 <li><a href="2019_EuroScipy_arrow">EuroScipy, 2019, September 4 - Apache Arrow:  a cross-language development platform for in-memory data</a></li>
 <li><a href="2019_FOSS4GBE_pygeos">FOSS4G Belgium, 2019, October 24 - GEOS in the Python ecosystem</a></li>
 <li><a href="2020_GeoPython_Shapely-2.0">GeoPython, 2020, September 22 - Shapely 2.0: an improved foundation for GeoPandas and the Python geospatial ecosystem</a></li>
+<li><a href="2022_PyDataBerlin_pandas-copy-view">PyConDE/PyData Berlin, 2022, April 13 - On Blocks, Copies and Views: updating pandas' internals</a></li>
 </ul>
 </html>
