--- a/2022_OGC-CNG_GeoParquet/index.html
+++ b/2022_OGC-CNG_GeoParquet/index.html
@@ -182,6 +182,21 @@ Example metadata:
 }
 ```
 
+---
+
+# What is GeoParquet?
+
+Small benchmark using the `nz-buildings-outlines.parquet` example dataset:
+
+File size:
+
+* GeoPackage: 1.2 GB
+* GeoParquet: 430 MB
+
+Read full dataset (single integer column) using Python - GDAL master, pyogrio, pyarrow:
+
+* GeoPackage: 27s (7s)
+* GeoParquet: 4.5s (55ms)
 
 ---
 
