add last sentence

--- a/2022_OGC-CNG_GeoParquet/index.html
+++ b/2022_OGC-CNG_GeoParquet/index.html
@@ -227,7 +227,7 @@ Future work:
 * GeoArrow encoding
 * Stabilize the spec
 
-
+Welcome to join at https://github.com/opengeospatial/geoparquet !
 
     </textarea>
 <!--    <script src="https://gnab.github.io/remark/downloads/remark-latest.min.js">
